Add computer player

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 <body>
     <div class="tic-tac-toe-container">
         <h1>Welcome to Tic Tac Toe</h1>
+        <h3>Try to beat Computer player if you can ;)</h3>
         <h3>Player 1 : <font color="red">X</font>
         </h3>
-        <h3>Player 2 : <font color="blue">O</font>
+        <h3>Computer : <font color="blue">O</font>
         </h3>
 
         <div>
